<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:minWidth="300dp"
    android:background="@color/dark"
    android:padding="10dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:hint="@string/first_name"
            android:padding="10dp"
            android:inputType="text"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:textColor="@color/dark"
            android:fontFamily="@font/roboto_light"
            android:textAlignment="center"
            android:importantForAutofill="yes"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:hint="@string/last_name"
            android:padding="10dp"
            android:inputType="text"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:textColor="@color/dark"
            android:fontFamily="@font/roboto_light"
            android:textAlignment="center"
            android:importantForAutofill="yes"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update"
        android:layout_margin="5dp"
        android:backgroundTint="@color/white"
        android:background="?attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        android:clickable="true"
        android:focusable="true"
        android:descendantFocusability="blocksDescendants">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/OTP_btn"
            android:text="@string/update"
            android:padding="7dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:fontFamily="@font/roboto"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>