<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/rootView"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editView"
            android:hint="@string/phone_number"
            android:padding="10dp"
            android:inputType="number"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:textColor="@color/dark"
            android:fontFamily="@font/roboto_light"
            android:textAlignment="center"
            android:importantForAutofill="yes"/>
    </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/sendOTP"
       android:layout_margin="5dp"
       android:backgroundTint="@color/dark"
       android:background="?attr/selectableItemBackground"
       app:cardCornerRadius="5dp"
       app:cardElevation="0dp"
       android:clickable="true"
       android:focusable="true"
       android:descendantFocusability="blocksDescendants">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
            android:id="@+id/OTP_btn"
           android:text="@string/send_otp"
           android:padding="10dp"
           android:textSize="18sp"
           android:textColor="@color/white"
           android:fontFamily="@font/roboto"
           android:textAlignment="center"/>
   </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <View android:layout_height="0.5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_light"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/or"/>

        <View
            android:layout_height="0.5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/white"/>

    </LinearLayout>

<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/continueWithEmail"-->
<!--        android:layout_margin="5dp"-->
<!--        app:cardCornerRadius="5dp"-->
<!--        app:cardElevation="0dp"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:descendantFocusability="blocksDescendants"-->

<!--        >-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->

<!--            android:padding="10dp"-->
<!--            tools:cardElevation="0dp">-->

<!--            <ImageView-->
<!--                android:id="@+id/email"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/ic_email"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:layout_marginStart="5dp"/>-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_toEndOf="@id/email"-->
<!--                android:fontFamily="@font/roboto_bold"-->
<!--                android:text="@string/continue_with_email"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:textAlignment="center" />-->

<!--        </RelativeLayout>-->


<!--    </androidx.cardview.widget.CardView>-->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/googleSignIn"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:descendantFocusability="blocksDescendants"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp"
            tools:cardElevation="0dp">

            <ImageView
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/google"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sign_in_with_google"
                android:layout_centerVertical="true"
                android:textAlignment="center" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>